Remove reference to IE7-specific css and js.
Although the original aim was to try and support IE7 (hence use of
javascript animation rather than css transitions), it has become a
struggle to move the project forward (as a sole developer) due to
dealing with all the snags of IE7. The final straw was the fact the IE7
engine struggles to cope with animating large numbers of elements, so
smoothness is lost. Therefore, I am ditching it.

--- a/markup/deckard.html
+++ b/markup/deckard.html
@@ -3,12 +3,7 @@
   	<head>
     	<meta charset="utf-8" />
     	<meta http-equiv="x-ua-compatible" content="IE=edge" />
-		<!--[if IE 7]>
-    		<link rel="stylesheet" href="deckard2-ie7.css" />
-    	<![endif]-->
-    	<![if !(IE 7)]>
-    		<link rel="stylesheet" href="deckard2.css" />
-    	<![endif]>
+    	<link rel="stylesheet" href="deckard2.css" />
 	</head>
 	<body class=""><!--<body class="debug">-->
 		<div id="deckard1" class="deckard">
@@ -624,14 +619,7 @@
   
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="jquery.mobile.custom.min.js"></script>
-			<!--[if IE 7]>
-	    		<script src="deckard2-ie7.js"></script>
-	    	<![endif]-->
-	    	<![if !(IE 7)]>
-	    		<script src="deckard2.js"></script>
-	    	<![endif]>	
-      <div>
-        
-      </div>
+	    <script src="deckard2.js"></script>
+      	<div></div>
 	</body>
 </html>
