Update css and js location references.
The css and js files have new homes in a better folder structure.

--- a/markup/deckard.html
+++ b/markup/deckard.html
@@ -3,7 +3,7 @@
   	<head>
     	<meta charset="utf-8" />
     	<meta http-equiv="x-ua-compatible" content="IE=edge" />
-    	<link rel="stylesheet" href="deckard2.css" />
+    	<link rel="stylesheet" href="../stylesheet/deckard.css" />
 	</head>
 	<body class=""><!--<body class="debug">-->
 		<div id="deckard1" class="deckard">
@@ -618,8 +618,8 @@
 		</div>
   
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script src="jquery.mobile.custom.min.js"></script>
-	    <script src="deckard2.js"></script>
+		<script src="../library/jquery.mobile.custom.min.js"></script>
+	    <script src="../javascript/deckard.js"></script>
       	<div></div>
 	</body>
 </html>
