--- a/markup/deckard.html
+++ b/markup/deckard.html
@@ -620,6 +620,7 @@
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="../library/jquery.mobile.custom.min.js"></script>
 	    <script src="../javascript/deckard.js"></script>
+	    <script>var deckard1 = new Deckard('#deckard1');</script>
       	<div></div>
 	</body>
 </html>
