--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <a id="examples" class="anchor" href="#examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>Examples</h3>
 
 <ul>
-<li><a href="markup/example1.html">Example One</a></li>
-<li><a href="markup/example2.html">Example Two</a></li>
+<li><a href="examples/markup/example1.html">Example One</a></li>
+<li><a href="examples/markup/example2.html">Example Two</a></li>
 </ul>
       </section>
       <footer>
