Copy DeckardJS files and dependencies into gh-pages.
In order for the examples to work on the gh-pages, have to copy across
the DeckardJS distro because gh-pages cannot see the raw files.

--- a/examples/markup/example1.html
+++ b/examples/markup/example1.html
@@ -3,7 +3,7 @@
   	<head>
     	<meta charset="utf-8" />
     	<meta http-equiv="x-ua-compatible" content="IE=edge" />
-    	<link rel="stylesheet" href="https://raw.githubusercontent.com/i-1-2-believe/DeckardJS/master/stylesheet/deckard.css" />
+    	<link rel="stylesheet" href="../stylesheet/deckard.css" />
     	<link rel="stylesheet" href="../stylesheet/example1.css" />
 	</head>
 	<body class=""><!--<body class="debug">-->
@@ -12,8 +12,8 @@
 		</div>
   
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script src="https://raw.githubusercontent.com/i-1-2-believe/DeckardJS/master/library/jquery.mobile.custom.min.js"></script>
-	    <script src="https://raw.githubusercontent.com/i-1-2-believe/DeckardJS/master/javascript/deckard.js"></script>
+		<script src="../library/jquery.mobile.custom.min.js"></script>
+	    <script src="../javascript/deckard.js"></script>
 	    <script>
 	    	var container = $('#deckard1');
 	    	for (var i = 0; i < 1000; i++) {
