Add new DeckardJS logo.
Add the DeckardJS logo to the webpage.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>DeckardJS</h1>
+        <h1><img src="deckardjs_logo.png" /></h1>
         <p>DeckardJS takes inspiration from the familiar presentation slide deck and generalises the metaphor into a display widget that can be applied to situations beyond simply presentation slides.</p>
 
         <p class="view"><a href="https://github.com/i-1-2-believe/DeckardJS">View the Project on GitHub <small>i-1-2-believe/DeckardJS</small></a></p>
@@ -28,13 +28,12 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="examples" class="anchor" href="#examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>Examples</h3>
+        <h3><a id="examples" class="anchor" href="#examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>Examples</h3>
 
-<ul>
-<li><a href="examples/markup/example1.html">Example One</a></li>
-<li><a href="examples/markup/example2.html">Example Two</a></li>
-</ul>
+        <ul>
+          <li><a href="examples/markup/example1.html">Example One</a></li>
+          <li><a href="examples/markup/example2.html">Example Two</a></li>
+        </ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/i-1-2-believe">i-1-2-believe</a></p>
