--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1><img src="deckardjs_logo.png" /></h1>
-        <p>DeckardJS takes inspiration from the familiar presentation slide deck and generalises the metaphor into a display widget that can be applied to situations beyond simply presentation slides.</p>
+        <p>DeckardJS takes inspiration from the familiar concept of a presentation slide deck and generalises the metaphor into a display widget that can be applied to situations beyond simply presentation slides.</p>
 
         <p class="view"><a href="https://github.com/i-1-2-believe/DeckardJS">View the Project on GitHub <small>i-1-2-believe/DeckardJS</small></a></p>
 
